<resources>
    <string name="app_name">RouteAssignment</string>
    <string name="facebook">facebook</string>
    <string name="email_or_phone">Email or Phone number</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up for Facebook</string>
    <string name="help_center">Help center</string>
    <string name="unblast">Unblast</string>
    <string name="post">Buckle up,because change is coming
        <string name="hyperlink"><a href="https://www.google.com/">https.unblast.com</a></string>
    </string>


    <string name="todo">TODO</string>


</resources>